Compensate for parent setting release=8
Like jffi, we need release to be 9 for some classes, so we force it
here.